Handle special contexts tokens

--- a/llm_tokenizer_special_contexts.ipynb
+++ b/llm_tokenizer_special_contexts.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPivejdOEjRhd18mqJpmXFp",
+      "authorship_tag": "ABX9TyOz0IV6a0aUqnybqOgkrvFd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,13 +47,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "qhhY4ZEEDxzS",
-        "outputId": "e06214f7-873c-490a-e68a-338b60386454"
+        "outputId": "6cc082b2-fa68-4969-aa53-90a327a07291"
       },
       "outputs": [
         {
@@ -107,9 +107,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PCTxV-WeF5Ro",
-        "outputId": "6a1ab501-6769-4433-b1ba-5766a713a613"
+        "outputId": "26422207-5463-4ebd-f1c0-d435e697b714"
       },
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,9 +159,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3eEj1fhiJJX1",
-        "outputId": "f94b3dd1-54f4-4286-865c-a1f5609a879a"
+        "outputId": "56367dd9-b070-4a4c-da37-b6d023753e30"
       },
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,9 +201,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4zJ6J54HK_y_",
-        "outputId": "16444631-bd3f-42ac-a3a5-5d2b129275a6"
+        "outputId": "10028a58-a6e9-4c38-c9ef-c9dc47fe886d"
       },
-      "execution_count": 10,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,7 +256,7 @@
       "metadata": {
         "id": "Bt5uL9z2LrY4"
       },
-      "execution_count": 33,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -282,9 +282,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NxuLJhu-rX_v",
-        "outputId": "045c5d47-f7eb-4b63-81e4-ad5ecdc4fdd9"
+        "outputId": "b827b12d-da51-4e8d-e7b9-13e57f33b4b4"
       },
-      "execution_count": 34,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,9 +306,9 @@
           "height": 34
         },
         "id": "0VctscGKt_2B",
-        "outputId": "76f0f69d-7ce2-4ad3-8859-2cdb5cd25faa"
+        "outputId": "bb9925e5-ddbf-4162-84b1-147ca8a084c2"
       },
-      "execution_count": 35,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -321,7 +321,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 8
         }
       ]
     },
@@ -354,32 +354,36 @@
       "metadata": {
         "id": "CoQYBzlBvrWj"
       },
-      "execution_count": 37,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "len(extended_vocab.items())"
+        "print(len(extended_vocab.items()))\n",
+        "for i, item in enumerate(list(extended_vocab.items())[-5:]):\n",
+        "    print(item)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "THvUvruWzN59",
-        "outputId": "a1fa14fc-f71f-4d67-c14c-e3930976c372"
+        "outputId": "38093e41-648f-4ff3-e564-8a9a443a0257"
       },
-      "execution_count": 38,
+      "execution_count": 23,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1132"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 38
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1132\n",
+            "('younger', 1127)\n",
+            "('your', 1128)\n",
+            "('yourself', 1129)\n",
+            "('<|endoftext|>', 1130)\n",
+            "('<|unk|>', 1131)\n"
+          ]
         }
       ]
     },
@@ -398,8 +402,8 @@
         "class TokenizerV2:\n",
         "    def __init__(self, extended_vocab):\n",
         "\n",
-        "        self.str_to_int = vocab\n",
-        "        self.int_to_str = {i:s for s,i in vocab.items()}\n",
+        "        self.str_to_int = extended_vocab\n",
+        "        self.int_to_str = {i:s for s,i in extended_vocab.items()}\n",
         "\n",
         "    def encode(self, input_text):\n",
         "\n",
@@ -430,7 +434,7 @@
       "metadata": {
         "id": "2wn_T5mkzlrw"
       },
-      "execution_count": 43,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -450,9 +454,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PK59whU81YPW",
-        "outputId": "5c705d38-ad35-4f24-b662-f6b60d8a4c8f"
+        "outputId": "479b2805-8ea1-49fd-f03b-d797554a96b5"
       },
-      "execution_count": 44,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -465,9 +469,65 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "tokenizer.encode(text)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iM0ownLu12zy",
+        "outputId": "b248272a-6fda-45c1-8fda-242aeaf04709"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1131, 5, 355, 1126, 628, 975, 10, 1130, 55, 988, 956, 984, 722, 988, 1131, 7]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokenizer.decode(tokenizer.encode(text))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "id": "myfuVDHR6Ziq",
+        "outputId": "4a91150f-e9a8-41bc-c62a-8b27cb80da8e"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'<|unk|>, do you like tea? <|endoftext|> In the sunlit terraces of the <|unk|>.'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "iM0ownLu12zy"
+        "id": "gtCiOzz39KuO"
       },
       "execution_count": null,
       "outputs": []
